add basic controller methods

--- a/job-log.Server/appsettings.json
+++ b/job-log.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "local": "Server=DESKTOP-21GNH95\\SQLEXPRESS;Database=JobLogDB;Trusted_Connection=True;TrustServerCertificate=true;"
+  }
 }
