add auth methods

--- a/job-log.Server/appsettings.json
+++ b/job-log.Server/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "local": "Server=DESKTOP-21GNH95\\SQLEXPRESS;Database=JobLogDB;Trusted_Connection=True;TrustServerCertificate=true;"
+    "local": "Server=DESKTOP-21GNH95\\SQLEXPRESS;Database=JobLogDB;Trusted_Connection=True;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "ValidIssuer": "https://localhost:7036",
+    "ValidAudience": "https://localhost:3000",
+    "Secret": "abcde"
   }
 }
