--- a/job-log.client/package.json
+++ b/job-log.client/package.json
@@ -2,6 +2,7 @@
   "name": "job-log.client",
   "private": true,
   "version": "0.0.0",
+  "proxy": "https://localhost:7036",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,10 +15,13 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
