--- a/job-log.client/package.json
+++ b/job-log.client/package.json
@@ -16,11 +16,12 @@
     "@mui/material": "^5.16.4",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
+    "framer-motion": "^11.3.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
-    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "redux": "^5.0.1"
   },
   "devDependencies": {
