--- a/.github/workflows/main_job-log.yml
+++ b/.github/workflows/main_job-log.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ./myapp
+          path: ./myapp/
 
   deploy:
     runs-on: windows-latest
@@ -44,6 +44,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
+    
+      - name: List files in deployment directory
+        run: dir ./myapp
       
       - name: Login to Azure
         uses: azure/login@v2
