--- a/.github/workflows/main_job-log.yml
+++ b/.github/workflows/main_job-log.yml
@@ -46,7 +46,7 @@ jobs:
           name: .net-app
     
       - name: List files in deployment directory
-        run: dir ./myapp
+        run: dir ${{ github.workspace }}/.net-app
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -60,4 +60,4 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'Job-Log'
-          package: ./myapp
+          package: ${{ github.workspace }}/.net-app
