--- a/.github/workflows/main_job-log.yml
+++ b/.github/workflows/main_job-log.yml
@@ -22,13 +22,13 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ./myapp
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ./myapp/
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
     runs-on: windows-latest
@@ -44,9 +44,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-    
-      - name: List files in deployment directory
-        run: dir ${{ github.workspace }}
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -60,4 +57,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'Job-Log'
-          package: ${{ github.workspace }}/.net-app
+          slot-name: 'Production'
+          package: .
