--- a/.github/workflows/main_job-log.yml
+++ b/.github/workflows/main_job-log.yml
@@ -21,23 +21,20 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: List files in deployment directory
-        run: dir "${{ env.DOTNET_ROOT}}"
-
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      - name: dotnet publish
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+
       - name: List files in deployment directory
         run: dir "${{ env.DOTNET_ROOT}}"
-
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: "${{env.DOTNET_ROOT}}/myapp"
 
   deploy:
     runs-on: windows-latest
